# rust-ndis-examples

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  rust-toolchain.toml
.cargo/: config.toml
.helix/: languages.toml
driver/: Cargo.toml
driver/mux/: Cargo.toml  Makefile.toml  build.rs  mux-miniport.inx  mux-protocol.inx
driver/mux-notify/: Cargo.toml
driver/mux-notify/src/: com_helpers.rs  lib.rs  notify.rs
driver/mux/src/: lib.rs  miniport.rs  mux.rs  protocol.rs  public.rs
driver/ndis-rs/: Cargo.toml
driver/ndis-rs/src/: lib.rs  mdl.rs  nb.rs  nb_list.rs
driver/ndis-rs/src/nb/: chain.rs
driver/ndis-rs/src/nb_list/: chain.rs  counted_queue.rs  iter.rs  queue.rs
driver/ndisprot-kmdf/: Cargo.toml  Makefile.toml  build.rs  ndisprot.inf  ndisprot_kmdf.inx
driver/ndisprot-kmdf/src/: lib.rs  ndisbind.rs  recv.rs  send.rs
driver/ra-check-hack/: Cargo.toml
driver/ra-check-hack/src/: lib.rs
driver/recv-queue/: Cargo.toml
driver/recv-queue/src/: lib.rs
driver/wdf-kmdf/: Cargo.toml
driver/wdf-kmdf-build/: Cargo.toml
driver/wdf-kmdf-build/src/: lib.rs
driver/wdf-kmdf-sys/: Cargo.toml  build.rs
driver/wdf-kmdf-sys/src/: lib.rs  wrapper.h
driver/wdf-kmdf/src/: collection.rs  context_space.rs  device.rs  driver.rs  file_object.rs  handle.rs  io_queue.rs  lib.rs  miniport.rs  object.rs  raw.rs  request.rs  sync.rs
driver/windows-kernel-rs/: Cargo.toml
driver/windows-kernel-rs/src/: lib.rs
driver/windows-kernel-sys/: Cargo.toml  build.rs
driver/windows-kernel-sys/src/: bindings.rs  lib.rs  wrapper.c  wrapper.h
libs/once-arc/: Cargo.toml
libs/once-arc/src/: lib.rs
libs/simple-arc-swap/: Cargo.toml
libs/simple-arc-swap/src/: lib.rs
libs/vtable/: Cargo.toml
ndisprot-kmdf/: Cargo.toml  Makefile.toml  build.rs  ndisprot.inf
ndisprot-kmdf/src/: lib.rs
notes/: notes.md
notes/work-log/: 2023-08-25.md  2023-08-29.md  2023-09-01.md  2023-09-02.md
prottest/: Cargo.toml
prottest/src/: main.rs
simple-arc-swap/src/: lib.rs
vtable/: Cargo.toml
vtable/src/: lib.rs
wdf-kmdf/: Cargo.toml
wdf-kmdf-sys/: Cargo.toml  build.rs
wdf-kmdf-sys/src/: lib.rs  wrapper.c  wrapper.h
wdf-kmdf/src/: lib.rs
wdk-kmdf-sys/: Cargo.toml  build.rs
wdk-kmdf-sys/src/: lib.rs  wrapper.c  wrapper.h
windows-kernel-rs/: Cargo.toml
windows-kernel-rs/src/: lib.rs
windows-kernel-sys/: Cargo.toml  build.rs
windows-kernel-sys/src/: lib.rs  wrapper.h
