[workspace]
resolver="2"

members = [
  "ndisprot-kmdf",
  "wdf-kmdf-sys",
  "windows-kernel-sys",
  "windows-kernel-rs",
  "wdf-kmdf",
  "vtable",
  "simple-arc-swap",
]

[workspace.dependencies]
vtable = { path = "vtable" }
pinned-init = { version = "0.0.6", default-features = false, features = ["alloc"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
