[workspace]
resolver="2"

members = [
  "driver/ndis-rs",
  "driver/ndisprot-kmdf",
  "driver/wdf-kmdf-sys",
  "driver/windows-kernel-sys",
  "driver/windows-kernel-rs",
  "driver/wdf-kmdf",
  "libs/vtable",
  "libs/once-arc",
  "prottest"
, "driver/mux-notify", "driver/mux", "driver/wdf-kmdf-build", "driver/ra-check-hack"]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
ndis-rs = { path = "driver/ndis-rs" }
nt-list = { version = "0.3.0", default-features = false }
once-arc = { path = "libs/once-arc", default-features = false }
pinned-init = { version = "0.0.6", default-features = false, features = ["alloc"] }
wdf-kmdf-build = { path = "driver/wdf-kmdf-build" }
windows-kernel-sys = { path = "driver/windows-kernel-sys" }
windows-kernel-rs = { path = "driver/windows-kernel-rs" }
vtable = { path = "libs/vtable" }

bindgen = "0.69.4"
bitflags = "2.3.3"
cc = "1.0"
static_assertions = "1.1.0"
thiserror = "1.0.57"
windows-registry = "0.1.1"
windows = "0.56.0"

[profile.dev]
panic = "abort"

[profile.release]
lto = "thin"
panic = "abort"
