[workspace]
resolver="2"

members = [
  "ndisprot-kmdf",
  "wdf-kmdf-sys",
  "windows-kernel-sys",
  "windows-kernel-rs",
  "wdf-kmdf",
]

[workspace.dependencies]
vtable = { path = "../libs/vtable" }
once-arc = { path = "../libs/once-arc", default-features = false }
pinned-init = { version = "0.0.6", default-features = false, features = ["alloc"] }
nt-list = { version = "0.3.0", default-features = false }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
