[package]
name = "prottest"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte = "0.2.6"
bytemuck = "1.13.1"
bytemuck_derive = "1.4.1"
clap = { version = "4.4.2", features = ["derive"] }
color-eyre = "0.6.2"
mycelium-bitfield = "0.1.3"
nt-string = "0.1.1"
widestring = "1.0.2"
windows = { version = "0.51.1", features = ["Win32_Foundation", "Win32_System_IO", "Win32_Storage_FileSystem", "Win32_Security", "Win32_NetworkManagement_Ndis"] }

[build-dependencies]
static_vcruntime = "2.0"
