[package]
name = "wdf-kmdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wdf-kmdf-sys = { path = "../wdf-kmdf-sys" }
windows-kernel-sys = { path = "../windows-kernel-sys" }
paste = "1.0.12"
static_assertions = "1.1.0"