[package]
name = "mux-notify"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]

[dependencies.windows]
version = "0.53.0"
features = [
  "implement",
  "Win32_Foundation",
  "Win32_NetworkManagement_NetManagement",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_Ole",
  "Win32_System_Registry",
  "Win32_Security",
]
