[package]
name = "mux-notify"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
windows-core.workspace = true
windows-implement.workspace = true
windows-registry.workspace = true

[dependencies.windows]
workspace = true
features = [
  "Win32_Foundation",
  "Win32_NetworkManagement_NetManagement",
  "Win32_System_Com",
  "Win32_System_LibraryLoader",
  "Win32_System_Ole",
]
