[package]
name = "ndisprot-kmdf"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wdf-kmdf-sys = { path = "../wdf-kmdf-sys" }
wdf-kmdf = { path = "../wdf-kmdf" }
windows-kernel-sys = { path = "../windows-kernel-sys" }
windows-kernel-rs = { path = "../windows-kernel-rs" }
vtable.workspace = true
once-arc.workspace = true
pinned-init.workspace = true
bitflags = "2.3.3"
scopeguard = { version = "1.2.0", default-features = false }

[build-dependencies]
thiserror = "1.0.40"
winreg = "0.50.0"
