[package]
name = "ndisprot-kmdf"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
wdf-kmdf-sys = { path = "../wdf-kmdf-sys" }
wdf-kmdf = { path = "../wdf-kmdf" }
windows-kernel-sys = { path = "../windows-kernel-sys" }
windows-kernel-rs = { path = "../windows-kernel-rs" }
vtable.workspace = true
pinned-init.workspace = true
bitflags = "2.3.3"
scopeguard = { version = "1.2.0", default-features = false }
crossbeam-utils = { version = "0.8.16", default-features = false }
nt-list.workspace = true
moveit = "0.6.0"
static_assertions = "1.1.0"

[build-dependencies]
thiserror = "1.0.40"
winreg = "0.50.0"
