[package]
name = "ndisprot-kmdf"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
std = []

[dependencies]
wdf-kmdf-sys = { path = "../wdf-kmdf-sys" }
wdf-kmdf = { path = "../wdf-kmdf" }
windows-kernel-sys.workspace = true
windows-kernel-rs.workspace = true
vtable.workspace = true
ndis-rs.workspace = true

pinned-init.workspace = true
bitflags.workspace = true
scopeguard = { version = "1.2.0", default-features = false }
crossbeam-utils = { version = "0.8.16", default-features = false }
nt-list.workspace = true
moveit = "0.6.0"
static_assertions = "1.1.0"

[build-dependencies]
wdf-kmdf-build.workspace = true
