[package]
name = "wdf-kmdf-sys"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows-kernel-sys = { path = "../windows-kernel-sys" }

[build-dependencies]
bindgen.workspace = true
thiserror.workspace = true
windows-registry.workspace = true
