[package]
name = "wdf-kmdf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wdf-kmdf-sys = { path = "../wdf-kmdf-sys" }
windows-kernel-sys = { path = "../windows-kernel-sys" }
windows-kernel-rs = { path = "../windows-kernel-rs" }
paste = "1.0.12"
static_assertions = "1.1.0"
vtable.workspace = true
pinned-init.workspace = true
lock_api = "0.4.10"