[package]
name = "wdf-kmdf"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wdf-kmdf-sys = { path = "../wdf-kmdf-sys" }
windows-kernel-sys.workspace = true
windows-kernel-rs.workspace = true
paste = "1.0.12"
static_assertions = "1.1.0"
vtable.workspace = true
pinned-init.workspace = true
lock_api = "0.4.10"
nt-list.workspace = true
moveit.workspace = true
crossbeam-utils.workspace = true
