[package]
name = "windows-kernel-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
heapless = "0.7.16"
bitflags = "2.3.3"

windows-kernel-sys = { path = "../windows-kernel-sys" }
nt-string = { version = "0.1.1", default-features = false, features = [ "alloc" ] }
