[package]
name = "windows-kernel-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.windows-sys]
version="0.48.0"
features = [
  "Win32_Foundation"
]
[build-dependencies]
bindgen = "0.65.1"
cc = "1.0.79"
thiserror = "1.0.40"
winreg = "0.50.0"
